--- a/styles/pages/signIn.css
+++ b/styles/pages/signIn.css
@@ -1,7 +1,6 @@
 @import url(../components/signInForm.css);
 
 body {
-  background: linear-gradient(180deg, #33383d 0%, #1c1d20 100%) no-repeat;
   height: 100vh;
   width: 100vw;
 
@@ -10,4 +9,13 @@ body {
 
   align-items: center;
   justify-content: center;
+
+  background-image: url(../../assets/images/signInBackground.png),
+    linear-gradient(180deg, #33383d 0%, #1c1d20 100%);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: contain;
+}
+
+main {
 }
