--- a/styles/components/button.css
+++ b/styles/components/button.css
@@ -1,7 +1,7 @@
 .button {
-  color: white;
-  background: linear-gradient(90deg, #ff2d04 0%, #c13216 100%);
-  box-shadow: inset 5px 5px 15px rgba(0, 0, 0, 0.15);
+  color: var(--text-color);
+  background: var(--secondary-gradient);
+  box-shadow: var(--box-shadow);
   border-radius: 50px;
   padding: 23px;
   width: 100%;
