--- a/styles/components/input.css
+++ b/styles/components/input.css
@@ -1,6 +1,5 @@
 .signIn__input-container {
   display: flex;
-  gap: 1rem;
   align-items: center;
 
   position: relative;
@@ -25,9 +24,9 @@
 .input-container__icon {
   font-size: 1.5rem;
   color: white;
-}
 
-.signIn__input-container > .input-container__icon {
+  position: absolute;
+  right: -2.125rem;
   transition: all 0.5s;
 }
 
