--- a/styles/components/signInForm.css
+++ b/styles/components/signInForm.css
@@ -6,5 +6,14 @@
   align-items: center;
   justify-content: center;
 
-  gap: 2rem;
+  gap: var(--size-8);
+}
+
+.signIn__title {
+  align-self: flex-start;
+  font-size: var(--size-8);
+}
+
+.signIn__button {
+  margin-top: 5.1875rem;
 }
