--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,3 +1,5 @@
+@import url(variables.css);
+
 * {
   margin: 0;
   padding: 0;
@@ -25,7 +27,7 @@ section {
 }
 body {
   line-height: 1;
-  font-family: 'Mark Pro', serif;
+  font-family: var(--font-family);
 }
 ol,
 ul {
