Add form title and description

--- a/styles/components/button.css
+++ b/styles/components/button.css
@@ -1,5 +1,5 @@
 .button {
-  color: var(--text-color);
+  color: var(--text-primary);
   background: var(--secondary-gradient);
   box-shadow: var(--box-shadow);
   border-radius: 50px;
