--- a/styles/pages/signIn.css
+++ b/styles/pages/signIn.css
@@ -9,10 +9,10 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
 
-  color: var(--text-color);
+  color: var(--text-primary);
 
   align-items: center;
-  justify-content: center;
+  justify-items: center;
 
   background-image: url(../../assets/images/signInBackground.png),
     var(--primary-gradient);
@@ -24,6 +24,21 @@ body {
 
 main {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  max-width: 23.75rem;
+}
+
+.main__title {
+  margin-bottom: var(--size-32);
+}
+
+.main__title > h1 {
+  font-size: var(--size-16);
+}
+
+.main__title > p {
+  color: var(--text-secondary);
 }
