--- a/styles/components/button.css
+++ b/styles/components/button.css
@@ -5,4 +5,11 @@
   border-radius: 50px;
   padding: 23px;
   width: 100%;
+
+  cursor: pointer;
+  transition: all 0.15 s;
+}
+
+.button:hover {
+  filter: brightness(1.1);
 }
