--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,6 +3,7 @@
   --size-2: 0.5rem; /* 8px */
   --size-3: 0.75rem; /* 12px */
   --size-4: 1rem; /* 16px */
+  --size-5: 1.25rem; /* 20px */
   --size-8: 2rem; /* 32px */
   --size-16: 4rem; /* 64px */
   --size-32: 8rem; /* 128px */
