Add weather css and home background image

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,11 +5,13 @@
   --size-4: 1rem; /* 16px */
   --size-5: 1.25rem; /* 20px */
   --size-8: 2rem; /* 32px */
+  --size-10: 2.5rem; /* 40px */
   --size-16: 4rem; /* 64px */
   --size-32: 8rem; /* 128px */
 
   --text-primary: #e1e1e6;
   --text-secondary: #c5c5c5;
+  --text-dark: #222222;
   --helper-text: #e9b425;
 
   --font-family: 'Mark Pro', sans-serif;
