--- a/styles/pages/home.css
+++ b/styles/pages/home.css
@@ -2,3 +2,13 @@
 @import url(../variables.css);
 
 @import url(../components/timer.css);
+@import url(../components/header.css);
+
+body {
+  background: url(../../assets/images/backgroundCompass.png) no-repeat;
+  background-position: left bottom;
+  background-size: 50vh;
+
+  height: 100vh;
+  width: 100vw;
+}
