--- a/styles/pages/home.css
+++ b/styles/pages/home.css
@@ -3,6 +3,7 @@
 
 @import url(../components/timer.css);
 @import url(../components/header.css);
+@import url(../components/footer.css);
 
 body {
   background: url(../../assets/images/backgroundCompass.png) no-repeat;
@@ -11,4 +12,13 @@ body {
 
   height: 100vh;
   width: 100vw;
+
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
