--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -3,9 +3,6 @@
   padding: 1rem 0;
 
   display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
 
   background: var(--primary-gradient);
   color: var(--text-primary);
@@ -13,10 +10,23 @@
   font-size: var(--size-3);
 }
 
+.footer__container {
+  border-left: 1px solid var(--text-primary);
+  width: 50vw;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 2rem;
+  gap: 4rem;
+}
+
 .footer__title {
   max-width: 580px;
   text-align: right;
 
-  border-right: 1px solid var(--text-primary);
   padding-right: 2rem;
+  text-align: right;
+  width: 100%;
+  margin-left: auto;
 }
