--- a/styles/pages/home.css
+++ b/styles/pages/home.css
@@ -10,8 +10,8 @@ body {
   background-position: left bottom;
   background-size: 50vh;
 
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  min-width: 100vw;
 
   display: flex;
   flex-direction: column;
