--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -3,6 +3,7 @@
   padding: 1rem 0;
 
   display: flex;
+  align-items: center;
 
   background: var(--primary-gradient);
   color: var(--text-primary);
