--- a/styles/components/timer.css
+++ b/styles/components/timer.css
@@ -14,3 +14,27 @@
   font-size: var(--size-4);
   transform: translateY(-15px);
 }
+
+.footer__timer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.footer__timer p {
+  max-width: 109px;
+  text-align: right;
+}
+
+.timer__countdown {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.timer__countdown strong {
+  font-size: var(--size-10);
+  font-weight: bold;
+}
