--- a/styles/pages/home.css
+++ b/styles/pages/home.css
@@ -21,5 +21,24 @@ body {
 main {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   flex: 1;
+
+  text-align: right;
+  padding: 0 var(--size-32);
+}
+
+.main__title h2 {
+  color: var(--text-red);
+  font-size: var(--size-16);
+  font-weight: 700;
+}
+
+.main__title .sm {
+  font-size: var(--size-8);
+}
+
+.main__title h3 {
+  color: var(--text-dark);
+  font-size: var(--size-6);
 }
