--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,6 +4,7 @@
   --size-3: 0.75rem; /* 12px */
   --size-4: 1rem; /* 16px */
   --size-5: 1.25rem; /* 20px */
+  --size-6: 1.5rem; /* 24px */
   --size-8: 2rem; /* 32px */
   --size-10: 2.5rem; /* 40px */
   --size-16: 4rem; /* 64px */
@@ -12,6 +13,7 @@
   --text-primary: #e1e1e6;
   --text-secondary: #c5c5c5;
   --text-dark: #222222;
+  --text-red: #c12d18;
   --helper-text: #e9b425;
 
   --font-family: 'Mark Pro', sans-serif;
