--- a/styles/pages/signIn.css
+++ b/styles/pages/signIn.css
@@ -14,12 +14,7 @@ body {
   align-items: center;
   justify-items: center;
 
-  background-image: url(../../assets/images/signInBackground.png),
-    var(--primary-gradient);
-
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: contain;
+  background-image: var(--primary-gradient);
 }
 
 main {
@@ -41,4 +36,31 @@ main {
 
 .main__title > p {
   color: var(--text-secondary);
+}
+
+.signIn__bg {
+  background-image: url(../../assets/images/signInBackground.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: cover;
+
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+
+  padding-top: var(--size-8);
+}
+
+@media screen and (max-width: 1280px) {
+  body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .signIn__bg {
+    display: none;
+  }
 }
